fix(console): adjust transfer source item spacing

--- a/packages/console/src/components/EntitiesTransfer/components/SourceEntityItem/index.module.scss
+++ b/packages/console/src/components/EntitiesTransfer/components/SourceEntityItem/index.module.scss
@@ -7,25 +7,11 @@
   cursor: pointer;
   user-select: none;
 
-  .icon {
-    width: 20px;
-    height: 20px;
-    border-radius: 6px;
-  }
-
-  .title {
-    flex: 1 1 0;
-    font: var(--font-body-2);
-    @include _.text-ellipsis;
-    margin-inline-start: _.unit(2);
-    max-width: fit-content;
-  }
-
-  .suspended {
-    margin-inline-start: _.unit(1);
-  }
-
   &:hover {
     background: var(--color-hover);
   }
+}
+
+.checkbox {
+  margin-inline-end: _.unit(2);
 }
